--- a/src/.project
+++ b/src/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>basic_model_0.5</name>
+	<name>cognitive_model</name>
 	<comment></comment>
 	<projects>
 	</projects>
